--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 appnope==0.1.2
 backcall==0.2.0
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
 click==8.0.1
 dataclasses==0.8
 decorator==5.0.9
+Deprecated==1.2.12
 Flask==2.0.1
 future==0.18.2
 gunicorn==20.1.0
@@ -24,7 +26,11 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.20
 ptyprocess==0.7.0
+pycparser==2.20
+PyGithub==1.55
 Pygments==2.10.0
+PyJWT==2.1.0
+PyNaCl==1.4.0
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
@@ -34,4 +40,5 @@ typing-extensions==3.10.0.0
 urllib3==1.26.6
 wcwidth==0.2.5
 Werkzeug==2.0.1
+wrapt==1.12.1
 zipp==3.5.0
